k8s/workload/litomi/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litomi-api
  annotations:
    rollouts.argoproj.io/managed-service: "true"
spec:
  selector:
    app.kubernetes.io/name: litomi-api
  ports:
    - name: http
      port: 3002
      protocol: TCP
      targetPort: http
