k8s/workload/litomi/base/api/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litomi-api
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: edge
      namespace: istio-ingress
      sectionName: root-https
  hostnames:
    - litomi.in
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: litomi-api
          port: 3002
          weight: 100
        - name: litomi-api-canary
          port: 3002
          weight: 0
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litomi-image-api
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: edge
      namespace: istio-ingress
      sectionName: img-https
  hostnames:
    - img.litomi.in
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /i
      backendRefs:
        - name: litomi-api
          port: 3002
          weight: 1
